samples/_failures_safe/1761219178_30c775_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00752e5c.c: In function ‘main’:
./samples/SAFE/__tmp_00752e5c.c:160:9: error: expected expression at end of input
  160 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_00752e5c.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00752e5c.c:160:9: error: expected declaration or statement at end of input
